--- a/main.html
+++ b/main.html
@@ -4,10 +4,72 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container mt-5">
+    <form>
+      <!-- First Name -->
+      <div class="form-group">
+        <label for="first-name-input">First Name</label>
+        <input type="text" class="form-control" id="first-name-input" placeholder="Enter your first name" required>
+        <small class="invalid-feedback">Please enter your first name.</small>
+      </div>
+
+      <!-- Last Name -->
+      <div class="form-group">
+        <label for="last-name-input">Last Name</label>
+        <input type="text" class="form-control" id="last-name-input" placeholder="Enter your last name">
+        <small class="invalid-feedback">Please enter your last name.</small>
+      </div>
+
+      <!-- Email -->
+      <div class="form-group">
+        <label for="email-input">Email</label>
+        <input type="email" class="form-control" id="email-input" placeholder="Enter your email">
+        <small class="invalid-feedback">Please enter a valid email address.</small>
+      </div>
+
+      <!-- College Name -->
+      <div class="form-group">
+        <label for="college-input">College Name</label>
+        <input type="text" class="form-control" id="college-input" placeholder="Enter your college name">
+        <small class="invalid-feedback">Please enter your college name.</small>
+      </div>
+
+      <!-- Roll No -->
+      <div class="form-group">
+        <label for="roll-no-input">Roll No</label>
+        <input type="text" class="form-control" id="roll-no-input" placeholder="Enter your roll number">
+        <small class="invalid-feedback">Please enter your roll number.</small>
+      </div>
+
+      <!-- Graduation Year -->
+      <div class="form-group">
+        <label for="graduation-year-input">Graduation Year</label>
+        <select class="form-control" id="graduation-year-input">
+          <option value="2020">2020</option>
+          <option value="2021">2021</option>
+          <option value="2022">2022</option>
+          <option value="2023">2023</option>
+        </select>
+      </div>
+
+      <!-- Conditions Checkbox -->
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="conditions-checkbox">
+        <label class="form-check-label" for="conditions-checkbox">I agree to the terms and conditions</label>
+        <small class="invalid-feedback">You must agree to the terms and conditions.</small>
+      </div>
+
+      <button type="submit" class="btn btn-primary mt-3">Submit</button>
+    </form>
+  </div>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
