--- a/main.html
+++ b/main.html
@@ -21,35 +21,35 @@
       <!-- Last Name -->
       <div class="form-group">
         <label for="last-name-input">Last Name</label>
-        <input type="text" class="form-control" id="last-name-input" placeholder="Enter your last name">
+        <input type="text" class="form-control" id="last-name-input" placeholder="Enter your last name" required>
         <small class="invalid-feedback">Please enter your last name.</small>
       </div>
 
       <!-- Email -->
       <div class="form-group">
-        <label for="email-input">Email</label>
-        <input type="email" class="form-control" id="email-input" placeholder="Enter your email">
+        <label for="email-input">Email Address</label>
+        <input type="email" class="form-control" id="email-input" placeholder="Enter your email" required>
         <small class="invalid-feedback">Please enter a valid email address.</small>
       </div>
 
       <!-- College Name -->
       <div class="form-group">
         <label for="college-input">College Name</label>
-        <input type="text" class="form-control" id="college-input" placeholder="Enter your college name">
+        <input type="text" class="form-control" id="college-input" placeholder="Enter your college name" required>
         <small class="invalid-feedback">Please enter your college name.</small>
       </div>
 
       <!-- Roll No -->
       <div class="form-group">
         <label for="roll-no-input">Roll No</label>
-        <input type="text" class="form-control" id="roll-no-input" placeholder="Enter your roll number">
+        <input type="text" class="form-control" id="roll-no-input" placeholder="Enter your roll number" required>
         <small class="invalid-feedback">Please enter your roll number.</small>
       </div>
 
       <!-- Graduation Year -->
       <div class="form-group">
-        <label for="graduation-year-input">Graduation Year</label>
-        <select class="form-control" id="graduation-year-input">
+        <label for="grad-year-select">Graduation Year</label>
+        <select class="form-control" id="grad-year-select" required>
           <option value="2020">2020</option>
           <option value="2021">2021</option>
           <option value="2022">2022</option>
@@ -59,7 +59,7 @@
 
       <!-- Conditions Checkbox -->
       <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="conditions-checkbox">
+        <input type="checkbox" class="form-check-input" id="conditions-checkbox" required>
         <label class="form-check-label" for="conditions-checkbox">I agree to the terms and conditions</label>
         <small class="invalid-feedback">You must agree to the terms and conditions.</small>
       </div>
