--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
 
       <!-- Roll No -->
       <div class="form-group">
-        <label for="roll-no-input">Roll No</label>
+        <label for="roll-no-input">Roll No.</label>
         <input type="text" class="form-control" id="roll-no-input" placeholder="Enter your roll number" required>
         <small class="invalid-feedback">Please enter your roll number.</small>
       </div>
@@ -49,7 +49,7 @@
       <!-- Graduation Year -->
       <div class="form-group">
         <label for="grad-year-select">Graduation Year</label>
-        <select class="form-control" id="grad-year-select" required>
+        <select class="form-select" id="grad-year-select" required>
           <option value="2020">2020</option>
           <option value="2021">2021</option>
           <option value="2022">2022</option>
